--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,11 @@
-<h1>Oh hi World</h1>
+<html>
+<body>
+<h1>Oh Hi World</h1>
+
+<h2> Settings </h2>
+
+<input type="checkbox"
+name="Rice Filter" value="RiceFilter"> Rice Filter <br>
+
+</body>
+</html>
