--- a/popup.html
+++ b/popup.html
@@ -7,5 +7,8 @@
 <input type="checkbox"
 name="Rice Filter" value="RiceFilter"> Rice Filter <br>
 
+<input type="checkbox"
+name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
+
 </body>
 </html>
