Oh Hi new style
Oh WOW a new style

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,16 @@
 <html>
 <body>
-<h1>Oh Hi World</h1>
+<style>
+    .italic {
+        font-style: italic;  
+    }
+    
+</style>
+</head>
+<body>
+<h1 class="italic">Oh Hi World</h1>
 
 <h2> Settings </h2>
-
 <input type="checkbox"
 name="Rice Filter" value="RiceFilter"> Rice Filter <br>
 
