--- a/popup.html
+++ b/popup.html
@@ -2,15 +2,18 @@
 <body>
 <style>
     .italic {
-        font-style: italic;  
+        font-style: italic;
     }
-    
+
 </style>
 </head>
 <body>
+
 <h1 class="italic">Oh Hi World</h1>
+<h1 style="Text-align:center;"</h1>
 
 <h2> Settings </h2>
+<h2 style="Text-align:left;"</h2>
 <input type="checkbox"
 name="Rice Filter" value="RiceFilter"> Rice Filter <br>
 
