--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,13 @@
 </style>
 </head>
 <body>
-<h1 class="italic">Oh Hi World</h1>
+    <h1 class="italic">Oh Hi World<h1>
+        
+        <h2 class="italic">Settings<h2>
 
-<h2> Settings </h2>
 <input type="checkbox"
-name="Rice Filter" value="RiceFilter"> Rice Filter <br>
+       
+ name="Rice Filter" value="RiceFilter"> Rice Filter <br>
 
 <input type="checkbox"
 name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
