--- a/popup.html
+++ b/popup.html
@@ -14,11 +14,13 @@
 
 <h2> Settings </h2>
 <h2 style="Text-align:left;"</h2>
+
 <input type="checkbox"
 name="Rice Filter" value="RiceFilter"> Rice Filter <br>
 
 <input type="checkbox"
 name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
 
+<button type="button" onclick="Success!"> Save</button>
 </body>
 </html>
