Im in the picture now
you're tearing me apart lisa

--- a/popup.html
+++ b/popup.html
@@ -25,5 +25,9 @@
 name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
 
 <button type="button" onclick="Success!"> Save</button>
+            
+       
+<img src="Tommy_Lisa.JPG" alt="You're tearing me apart lisa" style="width:304px;height:228px;">
+
 </body>
 </html>
