I have entered the room
Jpeg change

--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@ name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
 <button type="button" onclick="Success!"> Save</button>
             
        
-<img src="Tommy_Lisa.JPG" alt="You're tearing me apart lisa" style="width:304px;height:228px;">
+<img src="Tommy_has_Arrived.JPG" alt="You're tearing me apart lisa" style="width:160px;height:170px;">
 
 </body>
 </html>
