add style to popup

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,11 @@
         width: 100%;
     }
 
+    label {
+        display: inline-block;
+        margin-bottom: 5px;
+    }
+
 </style>
 </head>
 <body>
@@ -30,10 +35,10 @@
 <input type="checkbox"
 name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
 
-<button type="button" onclick="Success!"> Save</button>
-            
-       
-<img src="Tommy_Lisa.JPG" alt="You're tearing me apart lisa" style="width:304px;height:228px;">
+<button type="button" onclick="Success!">Save</button>
+
+
+<img src="Tommy_Lisa.jpg" alt="You're tearing me apart lisa" style="width:304px;height:228px;">
 
 </body>
 </html>
