I added a line break

--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,10 @@
     .italic {
         font-style: italic;
     }
-    
+
     body {
         width: 500px;
-      
+
     }
 
 </style>
@@ -22,7 +22,7 @@
  name="Rice Filter" value="RiceFilter"> Rice Filter <br>
 
 <input type="checkbox"
-name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br>
+name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br></br>
 
 <button type="button" onclick="Success!"> Save</button>
 </body>
