--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,7 @@ name="Voice Lines" value="Voice Lines"> Wiseguy Mode <br></br>
 <button id="save" type="button" value="PLAY" onclick="PlaySound('ohhiworl.mp3').play()"> Save</button>
 <audio id="ohhiworl" src="ohhiworl.mp3"></audio>
 
-<img src="Tommy_has_Arrived.jpg" alt="You're tearing me apart lisa"
+<img src="BeefyWiseau.png" alt="You're tearing me apart lisa"
      style="float:right;width:160px;height:170px;">
 
 </body>
